# SCE_resume-improvement

./: package-lock.json
app/: page.tsx
app/dashboard/: page.tsx
backend/: .gitignore  env.sample  pyproject.toml  requirements.txt
backend/app/: __init__.py  base.py  core.py  main.py
backend/app/agent/: __init__.py  exceptions.py  manager.py
backend/app/agent/providers/: __init__.py  base.py  llama_index.py  ollama.py  openai.py
backend/app/agent/strategies/: __init__.py  base.py  wrapper.py
backend/app/api/: __init__.py  middleware.py
backend/app/api/router/: __init__.py  health.py
backend/app/api/router/v1/: __init__.py  improve.py  job.py  resume.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py
backend/app/models/: __init__.py  base.py  job.py  resume.py  user.py
backend/app/prompt/: __init__.py  base.py  resume_improvement.py  structured_job.py  structured_resume.py
backend/app/schemas/pydantic/: __init__.py  improve.py  job.py  resume_improvement.py  resume_preview.py  structured_job.py  structured_resume.py
backend/app/services/: __init__.py  job_service.py  resume_service.py  score_improvement_service.py
components/cards/: AnalyzeCard.tsx  UploadResumeCard.tsx
components/shell/: Header.tsx
components/ui/: KeywordChips.tsx  SectionPanel.tsx  StatTile.tsx
contexts/: ResumePreviewerContext.tsx
frontend/: env.sample  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(default)/: layout.tsx  page.tsx
frontend/components/ui/: card.tsx
frontend/lib/: fixtures.ts
(+13 files in other folders)
